[metadata]
name = calculator
version = 1.0.0
author = Akash Agrawal
author_email = gddubious@gmail.com
description = A comprehensive calculator module with algebra.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/calculator
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
